--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -39,6 +39,43 @@ form {
   border-color: #5d33bf !important;
 }
 
+/* ipad pro */
+@media only screen and (max-width: 1024px) {
+  .btn {
+    display: block;
+    width: 40%;
+  }
+}
+
+/* ipad */
+@media only screen and (max-width: 768px) { 
+  form {
+    margin: 2rem 0 0 1rem;
+  } 
+
+  .contact_us_title {
+    font-size: 30px;
+  }
+
+  .form_inputs {
+    margin: 2rem 0;
+  }
+
+  #name {
+    width: 60% !important;
+  }
+
+  #textarea {
+    width: 70%;
+  }
+
+  .btn {
+    display: block;
+    width: 40%;
+  }
+
+}
+
 @media only screen and (max-width: 414px) { 
   form {
     margin: 2rem 0;
@@ -84,31 +121,5 @@ form {
   }
 }
 
-/* ipad */
-@media only screen and (max-width: 768px) { 
-  form {
-    margin: 2rem 0 0 1rem;
-  } 
 
-  .contact_us_title {
-    font-size: 30px;
-  }
-
-  .form_inputs {
-    margin: 2rem 0;
-  }
-
-  #name {
-    width: 60% !important;
-  }
-
-  #textarea {
-    width: 70%;
-  }
-
-  .btn {
-    width: 50%;
-  }
-
-}
 
