--- a/client/src/components/Testimonial/Testimonial.css
+++ b/client/src/components/Testimonial/Testimonial.css
@@ -23,10 +23,27 @@
 }
 
 
-/* ipad  */
+/* ipad pro */
 @media only screen and (max-width: 1024px) {
   .testimonial_description {
     font-size: 25px;
+    padding: 0 1rem 1rem 1rem;
+  }
+
+  .testimonial_name {
+    font-size: 20px;
+  }
+
+  .testimonial_location {
+    font-size: 18px;
+  }
+}
+
+/* ipad */
+@media only screen and (max-width: 768px) {
+  .testimonial_description {
+    font-size: 25px;
+    padding: 0 1rem;
   }
 
   .testimonial_name {
