--- a/client/src/pages/Contact/Contact.css
+++ b/client/src/pages/Contact/Contact.css
@@ -31,7 +31,15 @@
 }
 
 /* ipad pro */
-/* @media only screen and (min-width: 1024px) {} */
+ @media only screen and (max-width: 1024px) {
+  .contact_us_line_page {
+    width: 80%;
+  }
+
+  .contact_iso {
+    height: 110px;
+   }
+ } 
 
 /* ipad */ 
 @media only screen and (max-width: 768px) {
@@ -45,10 +53,6 @@
 
  }
 
-/* iphone 5-6 and pluses */
-/* @media only screen and (min-width: 414px) { 
-  
-}  */
 
 /* iphone x */
 @media only screen and (max-width: 375px) {  
