removed pictures from about us, refurbished, added popover to form once submitted

--- a/client/src/components/Navigation/Navbar.css
+++ b/client/src/components/Navigation/Navbar.css
@@ -41,6 +41,11 @@
   text-decoration: none;
 }
 
+.toolbar_toggle_button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
 @media (max-width: 768px) {
   .toolbar_nav_items{
