--- a/client/src/pages/EasyTrack/EasyTrack.css
+++ b/client/src/pages/EasyTrack/EasyTrack.css
@@ -34,14 +34,17 @@
 
 .easy_middle {
   padding: 3rem;
-  /* background-color: #a4b6fa; */
-  /* box-shadow: 0 0 7px -1px;
-  border-radius: 3px; */
 }
 
 .track_icon {
-  width: 16%;
+  width: 8%;
+  transition: transform .2s;
 }
+
+.track_icon:hover {
+  transform: scale(1.3)
+}
+
 
 .easy_middle.first {
   grid-area: 1 / 2 / 2 / 3; 
