--- a/client/src/pages/EquipmentSale/EquipmentSale.css
+++ b/client/src/pages/EquipmentSale/EquipmentSale.css
@@ -12,42 +12,22 @@
   font-weight: bold;
 }
 
-.refurbished_container {
-  display: grid;
-  grid-template-columns: 10% 1fr 1fr 10%;
-}
 
 .refurbished_description.one {
   grid-column: 2;
   margin: 4rem 2rem;
 }
 
-.monitor_img_container {
-  grid-column: 3;
-  text-align: center;
-}
-
-.monitor_img {
-  width: 70%;
-  margin-top: 4rem;
-   box-shadow: 0 0 7px -1px;
-  border-radius: 3px;
-}
 
 /* ipad pro */
-@media only screen and (max-width: 1024px) {}
+@media only screen and (max-width: 1024px) {
+  .refurbished_description.two {
+    margin-bottom: 12rem;
+  }
+}
 
 /* ipad */ 
 @media only screen and (max-width: 768px) {
-  .refurbished_container {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .monitor_img {
-    width: 40%;
-    margin: 0;
-  }
 
   .refurbished_description.one {
     font-size: 25px;
@@ -65,17 +45,9 @@
 
 /* iphone x */
 @media only screen and (max-width: 450px) {
-  .refurbished_container {
-    display: flex;
-    flex-direction: column;
-  }
 
   .refurbished_description.one {
     font-size: 20px;
-  }
-
-  .monitor_img {
-    margin: 0;
   }
 
   .rental_title {
