--- a/client/src/patientEquipment/FiberOptic/FiberOptic.css
+++ b/client/src/patientEquipment/FiberOptic/FiberOptic.css
@@ -5,9 +5,16 @@
   gap: 4% 0;
 }
 
-/* .fiber_img {
+.fiber_img_container {
   grid-area: 1 / 2 / 2 / 3;
-} */
+  text-align: center;
+}
+
+.fiber_img {
+  width: 70%;
+  box-shadow: 0 0 7px -1px;
+  border-radius: 3px;
+}
 
 .fiber_container1 {
   grid-area: 1 / 3 / 2 / 4;
