--- a/client/src/patientEquipment/PatientMonitoring/PatientMonitoring.css
+++ b/client/src/patientEquipment/PatientMonitoring/PatientMonitoring.css
@@ -5,33 +5,24 @@
   margin-bottom: 3rem;
 }
 
-.patient_img1 {
-  grid-area: 1 / 2 / 2 / 3;
-  justify-self: center;
-}
-
 .patient_description1 {
   grid-area: 2 / 2 / 3 / 3; 
 }
 
 .patient_img2 {
   grid-area: 1 / 3 / 2 / 4;
-  justify-self: center;
+  text-align: center;
 }
 
 .patient_description2 {
   grid-area: 2 / 3 / 3 / 4;
 }
 
-.patient_img3 {
-  grid-area: 1 / 4 / 2 / 5;  
-}
-
 .patient_description3 {
   grid-area: 2 / 4 / 3 / 5; 
 }
 
-.patient_img {
+.patient_pic {
   width: 80%;
   justify-self: center;
   box-shadow: 0 0 7px -1px;
@@ -61,16 +52,8 @@
     gap: 1px 1px;
   }
 
-  .patient_img1 {
-    grid-area: 1 / 2 / 2 / 3;
-  }
-
   .patient_img2 {
     grid-area: 1 / 3 / 2 / 4;
-  }
-
-  .patient_img3 {
-    grid-area: 1 / 4 / 2 / 5;
   }
 
   .patient_description1 {
@@ -104,16 +87,8 @@
     gap: 1px 1px;
   }
 
-  .patient_img1 {
-    grid-area: 1 / 2 / 2 / 3;
-  }
-
   .patient_img2 {
     grid-area: 1 / 3 / 2 / 4;
-  }
-
-  .patient_img3 {
-    grid-area: 1 / 4 / 2 / 5;
   }
 
   .patient_description1 {
@@ -151,5 +126,9 @@
 
   .patient_list ul {
     font-size: 20px;
+  }
+
+  .patient_pic {
+    margin: 2rem 0;
   }
 }
