--- a/client/src/surgicalEquipment/FlexibleEndoscope/FlexibleEndoscope.css
+++ b/client/src/surgicalEquipment/FlexibleEndoscope/FlexibleEndoscope.css
@@ -1,7 +1,7 @@
 .flex_header_container {
   background: linear-gradient(0deg, #8974b6,rgb(2, 28, 51));
   padding-top: 13%;
-  padding-bottom: 10%;
+  padding-bottom: 8%;
   text-align: center;
   color: white;
 }
@@ -17,7 +17,7 @@
 
 .flex_repair_services_container {
   text-align: center;
-  padding: 3% 5%;
+  margin: 4rem 2rem;
 }
 
 .flex_repair_services_title {
@@ -32,23 +32,23 @@
 
 .flex_brand_container {
   display: grid;
-  grid-template-columns: 30% 30% 30%;
+  grid-template-columns: 10% 1fr 1fr 10%;
   margin-bottom: 5%;
-  padding-left: 8%;
 }
 
 .flex_brand_flex1 {
-  grid-column: 1;
+  grid-column: 2;
+  text-align: center;
 }
 
 .flex_image1 {
-  width: 100%;
+  width: 70%;
   box-shadow: 0 0 7px -1px;
   border-radius: 3px;
 }
 
 .flex_brand_middle {
-  grid-column: 2;
+  grid-column: 3;
   text-align: center;
   align-self: center;
 }
@@ -65,19 +65,10 @@
   padding-left: 0;
 }
 
-.flex_brand_flex2 {
-  grid-column: 3;
-}
-
-.flex_image2 {
-  width: 100%;
-  box-shadow: 0 0 7px -1px;
-  border-radius: 3px;
-}
 
 .flex_middle_container {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 10% 1fr 1fr 10%;
   justify-items: center;
   align-items: flex-start;
   font-size: 30px;
@@ -85,7 +76,7 @@
 }
 
 .flex_perform_container {
-  grid-column: 1;
+  grid-column: 2;
 }
 
 .flex_perform_title {
@@ -102,7 +93,7 @@
 }
 
 .flex_services_container {
-  grid-column: 2;
+  grid-column: 3;
   
 }
 
