--- a/client/src/surgicalEquipment/UltrasoundProbe/UltrasoundProbe.css
+++ b/client/src/surgicalEquipment/UltrasoundProbe/UltrasoundProbe.css
@@ -6,12 +6,14 @@
 
 .ultra_img_container {
   grid-area: 1 / 2 / 2 / 3; 
+  text-align: center;
 }
 
 .ultra_img {
-  width: 80%;
+  width: 70%;
   box-shadow: 0 0 7px -1px;
   border-radius: 3px;
+  text-align: center;
 }
 
 .ultra_brands_container {
@@ -47,7 +49,7 @@
 }
 
 .ultra_middle_container.bottom {
-  margin: 10rem;
+  margin: 3rem 0;
 }
 
 .ultra_repairs_container {
