fixed media queries, added content to education page, added images to some equipment pages

--- a/client/src/components/NavbarDropDown/NavbarDropDown.css
+++ b/client/src/components/NavbarDropDown/NavbarDropDown.css
@@ -6,11 +6,6 @@
   white-space: nowrap;
 }
 
-/* .dropdown_button a:hover,
-.dropdown_button a:active {
-  color: #472a8e;
-} */
-
 button:focus {
   outline: none;
 }
@@ -64,3 +59,14 @@ button:focus {
   color: #8974b6; 
 }
 
+/* ipad pro */
+@media only screen and (max-width: 1024px) {
+  .dropdown_container {
+    display: block !important;
+    width: 20rem;
+  }
+
+  .list_item {
+    padding: 0 1rem !important;
+  }
+}
