--- a/client/src/patientEquipment/Ekg/Ekg.css
+++ b/client/src/patientEquipment/Ekg/Ekg.css
@@ -52,6 +52,7 @@
 @media only screen and (max-width: 1024px) {
   .ekg_container {
     gap: 1rem 1rem;
+    margin-bottom: 3rem;
   }
 
   .ekg_title {
