--- a/client/src/pages/Education/Education.css
+++ b/client/src/pages/Education/Education.css
@@ -26,6 +26,17 @@
   font-weight: bold;
 }
 
+.contact_text_description_title {
+  margin-top: 3rem;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.contact_text_description_subtitle{
+  font-size: 28px;
+  margin-bottom: 1rem;
+}
+
 .contact_text_description {
   font-size: 25px;
 }
