--- a/client/src/surgicalEquipment/Endoeye/Endoeye.css
+++ b/client/src/surgicalEquipment/Endoeye/Endoeye.css
@@ -1,35 +1,15 @@
-.phaco_container {
-  display: grid;
-  grid-template-columns: 10% 1fr 1fr 10%;
-  grid-template-rows: 1fr;
-  margin-bottom: 5rem;
-}
-
-.phaco_text_container {
-  grid-area: 1 / 2 / 2 / 3;
-}
-
-.endoeye_img_container.phaco {
-  grid-area: 1 / 3 / 2 / 4;
-}
-
 .diamond_container {
   display: grid;
-  grid-template-columns: 10% 1fr 1fr 1fr 10%;
-  grid-template-rows: 1fr;
+  grid-template-columns: 10% 1fr 1fr 10%;
   margin: 7rem 2rem;
 }
 
-.endoeye_img_container.diamond {
-  grid-area: 1 / 2 / 2 / 3;
-}
-
 .diamond_text_container {
-  grid-area: 1 / 3 / 2 / 4;
+  grid-column: 2;
 }
 
 .endoeye_img_container.micro {
-  grid-area: 1 / 4 / 2 / 5;
+  grid-column: 3;
 }
 
 .davinci_container {
@@ -62,7 +42,7 @@
 }
 
 .endo_img {
-  width: 80%;
+  width: 60%;
   box-shadow: 0 0 7px -1px;
   border-radius: 3px;
 }
