--- a/client/src/surgicalEquipment/VideoEquipment/VideoEquipment.css
+++ b/client/src/surgicalEquipment/VideoEquipment/VideoEquipment.css
@@ -1,19 +1,24 @@
 .video_img_container {
   display: flex;
-  justify-content: space-evenly;
+  text-align: center;
+  margin-left: 8rem;
 }
 
 .video_img {
-  width: 150%;
+  width: 50%;
   box-shadow: 0 0 7px -1px;
   border-radius: 3px;
+}
+
+.video_img.two {
+  width: 45%;
 }
 
 .video_middle_container {
   display: grid;
   grid-template-columns: 5% 1fr 1fr 5%;
   gap: 1px 1px;
-  margin: 10rem;
+  margin: 8rem 0;
 }
 
 .video_text_container {
