--- a/client/src/patientEquipment/PatientMonitoring/PatientMonitoring.css
+++ b/client/src/patientEquipment/PatientMonitoring/PatientMonitoring.css
@@ -12,6 +12,7 @@
 .patient_img2 {
   grid-area: 1 / 3 / 2 / 4;
   text-align: center;
+  margin-bottom: 3rem;
 }
 
 .patient_description2 {
@@ -30,7 +31,7 @@
 }
 
 .patient_title {
-  font-size: 50px;
+  font-size: 40px;
   color: #8974b6;
   font-weight: bold;
   text-align: center;
@@ -38,7 +39,7 @@
 
 .patient_list ul {
   list-style: none;
-  font-size: 30px;
+  font-size: 20px;
   padding-left: 0;
   text-align: center;
 }
@@ -70,11 +71,11 @@
   }
 
   .patient_title {
-    font-size: 32px;
+    font-size: 22px;
   }
 
   .patient_list ul {
-    font-size: 25px;
+    font-size: 15px;
   }
 }
 
@@ -105,11 +106,11 @@
   }
 
   .patient_title {
-    font-size: 32px;
+    font-size: 22px;
   }
 
   .patient_list ul {
-    font-size: 25px;
+    font-size: 15px;
   }
 } 
 
@@ -121,11 +122,11 @@
   }
 
   .patient_title {
-    font-size: 30px;
+    font-size: 20px;
   }
 
   .patient_list ul {
-    font-size: 20px;
+    font-size: 12px;
   }
 
   .patient_pic {
