--- a/client/src/surgicalEquipment/Endoeye/Endoeye.css
+++ b/client/src/surgicalEquipment/Endoeye/Endoeye.css
@@ -28,7 +28,7 @@
 }
 
 .endoeye_title {
-  font-size: 50px;
+  font-size: 40px;
   font-weight: bolder;
   color: #8974b6;
   text-align: center;
@@ -36,7 +36,7 @@
 
 .endoeye_list ul {
   list-style: none;
-  font-size: 30px;
+  font-size: 20px;
   padding-left: 0;
   text-align: center;
 }
@@ -48,17 +48,17 @@
 }
 
 .endoeye_img_container {
-  justify-items: center;
+  text-align: center;
 }
 
 /* ipad pro */
 @media only screen and (max-width: 1024px) {
   .endoeye_title {
-    font-size: 32px;
+    font-size: 22px;
   }
 
   .endoeye_list ul {
-    font-size: 25px;
+    font-size: 15px;
   }
 
   .diamond_container {
@@ -70,11 +70,11 @@
 /* ipad */ 
 @media only screen and (max-width: 768px) {
   .endoeye_title {
-    font-size: 32px;
+    font-size: 22px;
   }
 
   .endoeye_list ul {
-    font-size: 25px;
+    font-size: 15px;
   }
 
   .phaco_container {
@@ -99,11 +99,11 @@
   }
 
   .endoeye_title {
-    font-size: 30px;
+    font-size: 20px;
   }
 
   .endoeye_list ul {
-    font-size: 20px;
+    font-size: 12px;
   }
 
   .endo_img {
@@ -135,10 +135,10 @@
 /* ipad */ 
 @media only screen and (max-width: 320px) {
   .endoeye_title {
-    font-size: 25px;
+    font-size: 15px;
   }
 
   .endoeye_list ul {
-    font-size: 18px;
+    font-size: 12px;
   }
 }
